# Island

./: CMakeLists.txt  README.md
include/: defs.h
include/GLFW/: glfw3.h
include/assimp/: Importer.hpp  color4.h  config.h  light.h  material.h  material.inl  mesh.h  scene.h  texture.h  types.h
include/glad/: glad.h
include/glm/detail/: type_quat.inl
include/glm/ext/: quaternion_transform.hpp  quaternion_transform.inl  quaternion_trigonometric.hpp
include/util/: AbstractMesh.hpp  Builder.h  BuiltinMesh.h  Camera.h  ClientWorld.h  Mesh.h  Model.h  ModelManager.h  Screen.h  Shader.h  SkyBox.h  buffer_util.h  debug.h  game_util.h  light_util.h  materials.h  render_util.h  shaders.h  shapes.h  stb_image.h  texture_util.h  world.h
shader/: CompletedShader.vert  CubeShader.geom  CutoutShader.frag  DeferredDLightShader.frag  DeferredDLightShader.vert  DeferredPLightNoShadow.frag  DeferredPLightNoShadow.vert  DeferredPLightShader.frag  DeferredPLightShader.vert  DeferredScreen.frag  DeferredShader.frag  DepthCubeShader.frag  DepthCubeShader.vert  DepthShader.frag  DepthShader.vert  EnvDiffIrradianceShader.frag  EnvPrefilterShader.frag  GBufferShader.frag  GBufferShader.vert  GaussianBlur.frag  InstancedVert.vert  IntegrateBRDFShader.frag  PBRShader.frag  PBRShader.vert  PureColorShader.frag  SSAOShader.frag  SSAOShader.vert  ScreenShader.frag  ScreenShader.vert  ScreenShaderHDR.frag  SimpleShader.frag  SkyShader.frag  SkyShader.vert  SkyShaderEquirectangular.frag  SkyShaderHDR.frag  SolidShader.frag  TransparentShader.frag  VoidShader.frag  VoidShader.vert  fragmentShaderSource.frag  (+1 more)
src/: glad.c  main.cpp
src/util/: Builder.cpp  BuiltinMesh.cpp  Camera.cpp  ClientWorld.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Screen.cpp  Shader.cpp  SkyBox.cpp  buffer_util.cpp  debug.cpp  game_util.cpp  light_util.cpp  materials.cpp  render_util.cpp  shaders.cpp  shapes.cpp  texture_util.cpp  world.cpp
